# jonckheere_terpstra

./: README.md  pyproject.toml
notebooks/: example_notebook.ipynb
src/jonckheere_terpstra/: __init__.py  jonckheere_terpstra_test.py
tests/: test_jonckheere_terpstra.py
tests/R/: clinfun_benchmark.R  jonckheere_test_results_clinfun.json
tests/R_generation/: jonckheere_test_results_PMCMRplus.json  pcmr_benchmark.R
tests/python_generation/: exact_jonckheere_test_results_regression_pack.json  jonckheere_test_results_regression_pack.json  regression_pack_benchmark.py  regressionpack.py
